--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
-  "name": "@missing-comma/jest-extended-cli",
-  "version": "0.0.0",
-  "description": "Extended Utilities for jest command-line interface",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/missing-comma/jest-extended-cli.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/missing-comma/jest-extended-cli/issues"
-  },
-  "homepage": "https://github.com/missing-comma/jest-extended-cli#readme",
-  "dependencies": {
-    "@missing-comma/thoth-cli": "^0.0.0",
-    "jest": "^26.6.3"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.20"
-  }
+	"name": "@missing-comma/jest-extended-cli",
+	"version": "0.0.0",
+	"description": "Extended Utilities for jest command-line interface",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/missing-comma/jest-extended-cli.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/missing-comma/jest-extended-cli/issues"
+	},
+	"homepage": "https://github.com/missing-comma/jest-extended-cli#readme",
+	"dependencies": {
+		"@missing-comma/thoth-cli": "^0.0.0",
+		"jest": "^26.6.3"
+	},
+	"devDependencies": {
+		"@types/jest": "^26.0.20",
+		"@typescript-eslint/eslint-plugin": "^4.14.1",
+		"@typescript-eslint/parser": "^4.14.1",
+		"cross-env": "^7.0.3",
+		"prettier": "^2.2.1",
+		"ts-jest": "^26.5.0",
+		"ts-node": "^9.1.1",
+		"tsc-watch": "^4.2.9",
+		"tscpaths": "^0.0.9",
+		"tslint": "^6.1.3",
+		"tslint-config-prettier": "^1.18.0",
+		"typescript": "^4.2.2"
+	}
 }
