add nested deploy

--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,11 @@
-README.md
-node_modules
-jest.config.ts
+*.md
+*.config.ts
 test/
-src
-tsconfig.json
-tslint.json
-.prettierrc
-.vscode
+src/
+*.json
+.vscode/
 yarn-error.log
 test.js
+node_modules/
+dist/typings/
+.prettier*
