--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@missing-comma/jest-extended-cli",
-	"version": "0.0.5",
+	"name": "@missing-comma/jest-extended-cli-build",
+	"version": "0.0.6",
 	"description": "Extended Utilities for jest command-line interface",
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
@@ -15,6 +15,7 @@
 		"fixPaths": "tscpaths -p tsconfig.json -s ./src -o ./dist",
 		"build": "yarn tsc && yarn fixPaths ",
 		"build:test": "yarn tsc",
+		"copy": "copyfiles",
 		"test": "cross-env APP_ENV=testing jest --passWithNoTests --silent --noStackTrace --runInBand",
 		"test:verbose": "cross-env APP_ENV=testing jest --passWithNoTests --runInBand",
 		"test:unit": "cross-env TEST_SCOPE=unit yarn test --watch",
@@ -24,6 +25,7 @@
 		"test:deploy": "cross-env TEST_SCOPE=deploy yarn test",
 		"format": "prettier --write \"src/**/*.ts\"",
 		"lint": "echo tslint -p tsconfig.json",
+		"prepare-deploy": "node ./scripts/prepare-deploy.js",
 		"prepublishOnly": "npm run test:deploy && npm run lint",
 		"preversion": "npm run lint",
 		"version": "yarn build && npm run format && git add -A src",
@@ -50,6 +52,8 @@
 		"@types/jest-cli": "^24.3.0",
 		"@typescript-eslint/eslint-plugin": "^4.14.1",
 		"@typescript-eslint/parser": "^4.14.1",
+		"chalk": "^4.1.0",
+		"copyfiles": "^2.4.1",
 		"cross-env": "^7.0.3",
 		"jest-extended": "^0.11.5",
 		"prettier": "^2.2.1",
